--- a/SafeBus/res/layout/activity_contacto.xml
+++ b/SafeBus/res/layout/activity_contacto.xml
@@ -4,26 +4,15 @@
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:gravity="center"
-    tools:context=".RegistroContactosEmergenciaActivity" >
-
-    <TextView
-        android:id="@+id/mitaxiregistermanually_tv_label"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:layout_marginTop="5dp"
-        android:gravity="center"
-        android:text="@string/registro_titulo"
-        android:textStyle="bold" />
+    tools:context=".RegistroContactosEmergenciaActivity" 
+    android:background="@color/color_fondos"
+    >
 
     <ScrollView
         android:id="@+id/mitaxiregistermanually_sv_container_infouser_emer"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_above="@+id/linearLayout3"
-        android:layout_below="@+id/mitaxiregistermanually_btn_guardar"
+        android:layout_below="@+id/registro_btn_guardar"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
         android:layout_marginTop="5dp"
@@ -46,7 +35,8 @@
                 android:id="@+id/mitaxiregistermanually_ll_container_infouser_2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal" >
+                android:orientation="horizontal"
+                android:background="@drawable/marco" >
 
                 <LinearLayout
                     android:layout_width="0dp"
@@ -54,22 +44,23 @@
                     android:layout_weight=".8"
                     android:orientation="vertical" >
 
-                    <EditText
+                    <com.bm.safebus.registro.EditTextBackEvent
                         android:id="@+id/registro_et_telefono"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="0dp"
                         android:layout_marginBottom="3dp"
                         android:layout_marginTop="5dp"
                         android:layout_weight=".9"
                         android:drawableLeft="@drawable/ic_launcher_cel"
                         android:ems="10"
+                        android:maxLength="10"
                         android:focusable="true"
                         android:focusableInTouchMode="true"
                         android:hint="@string/registro_et_telefono"
                         android:inputType="phone"
                         android:textColorHint="@android:color/darker_gray" />
 
-                    <EditText
+                    <com.bm.safebus.registro.EditTextBackEvent
                         android:id="@+id/registro_et_correo"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -100,19 +91,38 @@
                         android:src="@drawable/ic_launcher_perfil" />
                 </LinearLayout>
             </LinearLayout>
+
+            <ImageView
+                android:id="@+id/imageView1"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/ic_help"
+                android:layout_gravity="right"
+                android:layout_marginTop="10dp" />
+
         </LinearLayout>
     </ScrollView>
 
-   
+    <TextView
+        android:id="@+id/mitaxiregistermanually_tv_label"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:gravity="center"
+        android:paddingTop="10dp"
+        android:text="@string/registro_titulo"
+        android:textStyle="bold" />
 
     <Button
-        android:id="@+id/mitaxiregistermanually_btn_guardar"
+        android:id="@+id/registro_btn_guardar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-android:layout_alignLeft="@+id/mitaxiregistermanually_sv_container_infouser_emer"
+        android:layout_alignParentLeft="true"
         android:layout_below="@+id/mitaxiregistermanually_tv_label"
         android:paddingLeft="15dp"
         android:paddingRight="15dp"
+        android:layout_margin="5dp"
         android:text="@string/registro_btn_guardar" />
 
 </RelativeLayout>
