--- a/SafeBus/res/layout/activity_chofer_main.xml
+++ b/SafeBus/res/layout/activity_chofer_main.xml
@@ -1,5 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:map="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="${relativePackage}.${activityClass}" >
@@ -8,6 +9,10 @@
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.MapFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        class="com.google.android.gms.maps.MapFragment"
+        map:cameraTargetLat="19.432727"
+        map:cameraTargetLng="-99.133179"
+        map:cameraZoom="18" />
 
 </RelativeLayout>
