--- a/SafeBus/res/layout/dialogo_contactos.xml
+++ b/SafeBus/res/layout/dialogo_contactos.xml
@@ -8,6 +8,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#ffffff"
         android:orientation="vertical" >
 
         <LinearLayout
@@ -50,8 +51,8 @@
                 android:id="@+id/dialogo_contacto_lv_contactos"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:overScrollMode="never" 
-                android:listSelector="@android:color/transparent">
+                android:listSelector="@android:color/transparent"
+                android:overScrollMode="never" >
             </ListView>
         </LinearLayout>
     </LinearLayout>
