--- a/SafeBus/res/layout/activity_splash.xml
+++ b/SafeBus/res/layout/activity_splash.xml
@@ -2,16 +2,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="${relativePackage}.${activityClass}"
-    android:background="@color/color_fondos" >
+    android:background="@color/color_fondos"
+    tools:context="${relativePackage}.${activityClass}" >
 
-    <ImageView
-        android:id="@+id/imageView1"
+    <FrameLayout
+        android:id="@+id/frame_splash"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:scaleType="centerInside"
-        android:src="@drawable/safebus_principal" />
+        android:layout_centerVertical="true" >
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:scaleType="centerInside"
+            android:src="@drawable/safebus_principal" />
+    </FrameLayout>
 
 </RelativeLayout>
