--- a/SafeBus/res/layout/paginador_activity.xml
+++ b/SafeBus/res/layout/paginador_activity.xml
@@ -2,8 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" 
-    android:background="@color/color_fondos">
+    android:background="@color/color_fondos"
+    android:orientation="vertical" >
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight=".1"
+        android:drawableRight="@drawable/ic_launcher_name"
+        android:gravity="center"
+        android:layout_marginLeft="10dp"
+        android:text="@string/paginas_instrucciones_titulo"
+        android:textStyle="bold" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/pager_dialog"
@@ -15,7 +25,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight=".3"
+        android:layout_weight=".2"
         android:gravity="center"
         android:orientation="vertical" >
 
