--- a/SafeBus/res/layout/instrucciones_pag_dos.xml
+++ b/SafeBus/res/layout/instrucciones_pag_dos.xml
@@ -10,32 +10,18 @@
         android:layout_height="match_parent"
         android:layout_gravity="center"
         android:orientation="vertical"
-        android:paddingTop="25dp" >
-
-        <ImageView
-            android:id="@+id/textView1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:scaleType="centerInside"
-            android:layout_margin="5dp"
-            android:src="@drawable/saefubus_safebus" />
+        android:padding="25dp" >
 
         <TextView
             android:id="@+id/textView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:paddingBottom="10dp"
-            android:paddingLeft="25dp"
-            android:paddingRight="25dp"
-            android:paddingTop="10dp"
             android:text="@string/paginas_instrucciones_texto_pag_2_1" />
 
         <ImageView
             android:id="@+id/instrucciones_iv_mas"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_gravity="center"
             android:layout_margin="10dp"
             android:src="@drawable/saefubus_mas" />
@@ -44,44 +30,29 @@
             android:id="@+id/textView3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:paddingBottom="10dp"
-            android:paddingLeft="25dp"
-            android:paddingRight="25dp"
-            android:paddingTop="25dp"
             android:text="@string/paginas_instrucciones_texto_pag_2_2" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="5dp"
-            android:layout_marginRight="5dp"
-            android:layout_marginTop="5dp"
-            android:paddingRight="25dp" 
-            android:paddingLeft="0dp"
-            android:paddingTop="10dp"
-
-            >
+            android:layout_height="0dp"
+            android:layout_weight=".2"
+            android:paddingTop="10dp" >
 
             <ImageView
                 android:id="@+id/imageView1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:scaleType="centerInside"
-                android:src="@drawable/ic_launcher_saefubus_banderilla"
                 android:layout_gravity="bottom"
-  />
+                android:scaleType="centerInside"
+                android:src="@drawable/ic_launcher_saefubus_banderilla" />
 
             <TextView
                 android:id="@+id/textView4"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="10dp"
                 android:gravity="bottom"
                 android:text="@string/paginas_instrucciones_texto_pag_2_3" />
         </LinearLayout>
     </LinearLayout>
-
-   
 
 </LinearLayout>
