--- a/SafeBus/res/layout/instrucciones_pag_uno.xml
+++ b/SafeBus/res/layout/instrucciones_pag_uno.xml
@@ -8,30 +8,15 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="5dp"
+        android:layout_gravity="center"
         android:orientation="vertical"
-        android:padding="5dp" >
+        android:padding="25dp" >
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:drawableRight="@drawable/saefubus_safebus"
-            android:padding="20dp"
-            android:text="@string/paginas_instrucciones_titulo"
-            android:textStyle="bold" />
-
-        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:padding="20dp" >
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="@string/paginas_instrucciones_texto_pag_1" />
-        </LinearLayout>
+            android:layout_height="wrap_content"
+            android:layout_gravity="center|top"
+            android:text="@string/paginas_instrucciones_texto_pag_1" />
     </LinearLayout>
 
 </LinearLayout>
