--- a/SafeBus/res/layout/activity_contacto.xml
+++ b/SafeBus/res/layout/activity_contacto.xml
@@ -1,12 +1,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:layout_gravity="center"
-    android:gravity="center"
-    tools:context=".RegistroContactosEmergenciaActivity" 
     android:background="@color/color_fondos"
-    >
+    android:gravity="center"
+    android:paddingTop="5dp"
+    tools:context=".RegistroContactosEmergenciaActivity" >
 
     <ScrollView
         android:id="@+id/mitaxiregistermanually_sv_container_infouser_emer"
@@ -19,6 +19,7 @@
         android:layout_weight="1"
         android:fillViewport="true"
         android:overScrollMode="never"
+        android:paddingTop="15dp"
         android:scrollbars="vertical" >
 
         <LinearLayout
@@ -35,8 +36,9 @@
                 android:id="@+id/mitaxiregistermanually_ll_container_infouser_2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:background="@drawable/marco" >
+                android:background="@drawable/marco"
+                android:padding="5dp"
+                android:orientation="horizontal" >
 
                 <LinearLayout
                     android:layout_width="0dp"
@@ -49,15 +51,18 @@
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
                         android:layout_marginBottom="3dp"
+                        android:layout_marginLeft="5dp"
+                        android:layout_marginRight="0dp"
                         android:layout_marginTop="5dp"
                         android:layout_weight=".9"
+                        android:background="@drawable/selector_edittext"
                         android:drawableLeft="@drawable/ic_launcher_cel"
                         android:ems="10"
-                        android:maxLength="10"
                         android:focusable="true"
                         android:focusableInTouchMode="true"
                         android:hint="@string/registro_et_telefono"
                         android:inputType="phone"
+                        android:maxLength="10"
                         android:textColorHint="@android:color/darker_gray" />
 
                     <com.bm.safebus.registro.EditTextBackEvent
@@ -65,7 +70,10 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="3dp"
+                        android:layout_marginLeft="5dp"
+                        android:layout_marginRight="0dp"
                         android:layout_marginTop="5dp"
+                        android:background="@drawable/selector_edittext"
                         android:drawableLeft="@drawable/ic_launcher_mail"
                         android:ems="10"
                         android:focusable="true"
@@ -96,33 +104,47 @@
                 android:id="@+id/imageView1"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:src="@drawable/ic_help"
                 android:layout_gravity="right"
-                android:layout_marginTop="10dp" />
-
+                android:layout_marginTop="10dp"
+                android:src="@drawable/ic_help" />
         </LinearLayout>
     </ScrollView>
 
-    <TextView
-        android:id="@+id/mitaxiregistermanually_tv_label"
+    <ImageView
+        android:id="@+id/ImageView_titulo_contacto"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="100dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
+        android:layout_margin="10dp"
         android:gravity="center"
-        android:paddingTop="10dp"
-        android:text="@string/registro_titulo"
-        android:textStyle="bold" />
+        android:padding="10dp"
+        android:src="@drawable/saefubus_safebus" />
 
     <Button
         android:id="@+id/registro_btn_guardar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/mitaxiregistermanually_tv_label"
+        android:layout_alignRight="@+id/ImageView_titulo_contacto"
+        android:layout_below="@+id/ImageView_titulo_contacto"
+        android:layout_margin="5dp"
+        android:background="@drawable/selector_btn_square"
         android:paddingLeft="15dp"
         android:paddingRight="15dp"
-        android:layout_margin="5dp"
-        android:text="@string/registro_btn_guardar" />
+        android:text="@string/registro_btn_guardar"
+        android:textColor="@drawable/selector_tv_color_btn" />
+
+    <TextView
+        android:id="@+id/mitaxiregistermanually_tv_label"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/registro_btn_guardar"
+        android:layout_alignBottom="@+id/registro_btn_guardar"
+        android:layout_toLeftOf="@+id/registro_btn_guardar"
+        android:gravity="left"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
+        android:text="@string/registro_titulo"
+        android:textStyle="bold" />
 
 </RelativeLayout>
