--- a/SafeBus/res/layout/dialogo_contactos.xml
+++ b/SafeBus/res/layout/dialogo_contactos.xml
@@ -45,7 +45,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="2dp"
                 android:layout_marginTop="10dp"
-                android:background="@color/color_vivos" />
+                android:background="@color/color_safebus_rojo" />
 
             <ListView
                 android:id="@+id/dialogo_contacto_lv_contactos"
