--- a/SafeBus/res/layout/instrucciones_pag_uno.xml
+++ b/SafeBus/res/layout/instrucciones_pag_uno.xml
@@ -15,6 +15,14 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:text="@string/paginas_instrucciones_titulo" 
+            android:layout_marginBottom="10dp"
+            android:textStyle="bold"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_gravity="center|top"
             android:text="@string/paginas_instrucciones_texto_pag_1" />
     </LinearLayout>
