--- a/SafeBus/res/layout/instrucciones_pag_dos.xml
+++ b/SafeBus/res/layout/instrucciones_pag_dos.xml
@@ -14,7 +14,7 @@
         android:padding="25dp" >
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/instrucciones_p2_tv_titulo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/paginas_instrucciones_texto_pag_2_1" />
@@ -28,7 +28,7 @@
             android:background="@drawable/boton_mas_selector" />
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/instrucciones_p2_tv_da_click"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/paginas_instrucciones_texto_pag_2_2" />
