--- a/SafeBus/res/layout/activity_chofer_main.xml
+++ b/SafeBus/res/layout/activity_chofer_main.xml
@@ -24,4 +24,12 @@
         android:layout_alignParentTop="true"
         android:src="@drawable/saefubus_back" />
 
+    <ImageView
+        android:id="@+id/_iv_gps"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:src="@drawable/boton_gps_selector" />
+
 </RelativeLayout>
