--- a/SafeBus/res/values/styles.xml
+++ b/SafeBus/res/values/styles.xml
@@ -20,8 +20,20 @@
         <item name="android:actionBarItemBackground">@null</item>
         <item name="actionBarItemBackground">@null</item>
     </style>
-     <style name="MyActionBar" parent="@android:style/Widget.Holo.Light.ActionBar">
+
+    <style name="MyActionBar" parent="@android:style/Widget.Holo.Light.ActionBar">
         <item name="android:background">#ffffff</item>
+
+      
     </style>
 
+    <style name="Transparent" parent="android:Theme.Light">
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:backgroundDimEnabled">false</item>
+    </style>
+    
 </resources>
