--- a/SafeBus/res/layout/activity_contacto.xml
+++ b/SafeBus/res/layout/activity_contacto.xml
@@ -37,8 +37,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/marco"
-                android:padding="5dp"
-                android:orientation="horizontal" >
+                android:orientation="horizontal"
+                android:padding="5dp" >
 
                 <LinearLayout
                     android:layout_width="0dp"
@@ -64,23 +64,6 @@
                         android:inputType="phone"
                         android:maxLength="10"
                         android:textColorHint="@android:color/darker_gray" />
-
-                    <com.bm.safebus.registro.EditTextBackEvent
-                        android:id="@+id/registro_et_correo"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="3dp"
-                        android:layout_marginLeft="5dp"
-                        android:layout_marginRight="0dp"
-                        android:layout_marginTop="5dp"
-                        android:background="@drawable/selector_edittext"
-                        android:drawableLeft="@drawable/ic_launcher_mail"
-                        android:ems="10"
-                        android:focusable="true"
-                        android:focusableInTouchMode="true"
-                        android:hint="@string/registro_et_correo"
-                        android:inputType="textEmailAddress"
-                        android:textColorHint="@android:color/darker_gray" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -100,13 +83,38 @@
                 </LinearLayout>
             </LinearLayout>
 
-            <ImageView
-                android:id="@+id/imageView1"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_gravity="right"
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/marco"
+                android:orientation="horizontal"
                 android:layout_marginTop="10dp"
-                android:src="@drawable/ic_help" />
+                android:padding="5dp" >
+
+                <com.bm.safebus.registro.EditTextBackEvent
+                    android:id="@+id/registro_et_mensaje_emergencia"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:background="@drawable/selector_edittext"
+                    android:ems="10"
+                    android:focusable="true"
+                    android:focusableInTouchMode="true"
+                    android:inputType="textMultiLine"
+                    android:lines="4"
+                    android:maxLength="80"
+                    android:padding="5dp"
+                    android:singleLine="false"
+                    android:hint="@string/mensaje_emergencia_hint"
+                    android:text="@string/mensaje_emergencia" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/textView1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="5dp"
+                android:text="@string/instrucciones_contacto" />
         </LinearLayout>
     </ScrollView>
 
