--- a/SafeBus/res/layout/activity_facebooklogin.xml
+++ b/SafeBus/res/layout/activity_facebooklogin.xml
@@ -1,24 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/color_fondos"
     android:orientation="vertical" >
 
-    <TextView
-        android:id="@+id/facebook_tv_useranme"
+    <ImageView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Large Text"
-        android:layout_centerInParent="true"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:layout_height="0dp"
+        android:layout_margin="10dp"
+        android:layout_weight=".1"
+        android:gravity="center"
+        android:padding="10dp"
+        android:src="@drawable/saefubus_safebus" />
 
-    <Button
-        android:id="@+id/facebook_btn_post"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:text="Button" />
-    
-</RelativeLayout>
+        android:layout_height="0dp"
+        android:layout_weight=".7"
+        android:orientation="vertical" >
+
+        <TextView
+            android:id="@+id/pager_dialog"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight=".5"
+            android:padding="10dp"
+            android:gravity="center|left"
+            android:text="@string/notificar_acceso_wifi" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight=".5"
+            android:layout_marginBottom="25dp"
+            android:paddingTop="10dp"
+            android:gravity="bottom" >
+
+            <ImageView
+                android:id="@+id/imageView1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:scaleType="fitStart"
+                android:src="@drawable/ic_launcher_saefubus_banderilla" />
+
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center|left"
+                android:text="@string/gracias_por_compartir_banda" />
+        </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight=".2"
+        android:gravity="center"
+        android:orientation="vertical" >
+
+        <com.facebook.widget.LikeView
+            android:id="@+id/facebook_btn_post"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Button" />
+    </LinearLayout>
+
+</LinearLayout>
