--- a/SafeBus/res/layout/activity_facebooklogin.xml
+++ b/SafeBus/res/layout/activity_facebooklogin.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:facebook="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/color_fondos"
@@ -25,17 +26,17 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight=".5"
-            android:padding="10dp"
             android:gravity="center|left"
+            android:padding="10dp"
             android:text="@string/notificar_acceso_wifi" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight=".5"
             android:layout_marginBottom="25dp"
-            android:paddingTop="10dp"
-            android:gravity="bottom" >
+            android:layout_weight=".5"
+            android:gravity="bottom"
+            android:paddingTop="10dp" >
 
             <ImageView
                 android:id="@+id/imageView1"
@@ -60,11 +61,21 @@
         android:gravity="center"
         android:orientation="vertical" >
 
+        <com.facebook.widget.LoginButton
+            android:id="@+id/fb_login_button"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:padding="5dp"
+            facebook:confirm_logout="false"
+            facebook:fetch_user_info="true" />
+
         <com.facebook.widget.LikeView
             android:id="@+id/facebook_btn_post"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Button" />
+            android:text="Button"
+            android:visibility="gone" />
     </LinearLayout>
 
 </LinearLayout>
