add comentario bus

--- a/SafeBus/res/values/styles.xml
+++ b/SafeBus/res/values/styles.xml
@@ -36,4 +36,16 @@
         <item name="android:backgroundDimEnabled">false</item>
     </style>
     
+     <style name="StarRatingBar" parent="@android:style/Widget.RatingBar">
+        <item name="android:progressDrawable">@drawable/star_rating_bar_full</item>
+        <item name="android:minHeight">48dip</item>
+        <item name="android:maxHeight">48dip</item>
+    </style>
+
+    <style name="StarRatingBarMin" parent="@android:attr/ratingBarStyleSmall">
+        <item name="android:progressDrawable">@drawable/star_rating_bar_full</item>
+        <item name="android:minHeight">38dip</item>
+        <item name="android:maxHeight">38dip</item>
+    </style>
+    
 </resources>
