--- a/SafeBus/res/layout/activity_contacto.xml
+++ b/SafeBus/res/layout/activity_contacto.xml
@@ -59,6 +59,7 @@
                         android:drawableLeft="@drawable/ic_launcher_cel"
                         android:ems="10"
                         android:focusable="true"
+						android:digits="0123456789"
                         android:focusableInTouchMode="true"
                         android:hint="@string/registro_et_telefono"
                         android:inputType="phone"
