--- a/SafeBus/res/layout/instrucciones_pag_uno.xml
+++ b/SafeBus/res/layout/instrucciones_pag_uno.xml
@@ -13,17 +13,21 @@
         android:padding="25dp" >
 
         <TextView
+            android:id="@+id/instrucciones_pag_1_tv_titulo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
+            android:textSize="28sp"
             android:text="@string/paginas_instrucciones_titulo" 
             android:layout_marginBottom="10dp"
             android:textStyle="bold"/>
 
         <TextView
+            android:id="@+id/instrucciones_pag_1_tv_contenido"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center|top"
+            android:textSize="16sp"
             android:text="@string/paginas_instrucciones_texto_pag_1" />
     </LinearLayout>
 
