--- a/SafeBus/res/menu/menu_main.xml
+++ b/SafeBus/res/menu/menu_main.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android" >
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:yourapp="http://schemas.android.com/apk/res-auto" >
 
     <item
         android:id="@+id/menu"
         android:icon="@drawable/boton_menu_selector"
-        android:showAsAction="always"
-        android:title="@string/main_menu_menu">
+        android:title="@string/main_menu_menu"
+        yourapp:showAsAction="always">
         <menu>
             <item
                 android:id="@+id/menuadd"
