--- a/SafeBus/res/values/styles.xml
+++ b/SafeBus/res/values/styles.xml
@@ -19,10 +19,12 @@
         <item name="android:selectableItemBackground">@null</item>
         <item name="android:actionBarItemBackground">@null</item>
         <item name="actionBarItemBackground">@null</item>
+
     </style>
 
     <style name="MyActionBar" parent="@android:style/Widget.Holo.Light.ActionBar">
         <item name="android:background">#ffffff</item>
+                 <item name="android:textColor">#ff0000</item>
 
       
     </style>
