--- a/SafeBus/res/values/styles.xml
+++ b/SafeBus/res/values/styles.xml
@@ -87,5 +87,9 @@
 		<item name="@android:windowEnterAnimation">@anim/grow_from_bottom</item>
 		<item name="@android:windowExitAnimation">@anim/shrink_from_top</item>
 	</style>
+	
+	<style name="SwitchTextAppearance" parent="@android:style/TextAppearance.Holo.Small">
+    <item name="android:textColor">#000000</item>
+</style>
     
 </resources>
