--- a/SafeBus/res/menu/menu_main.xml
+++ b/SafeBus/res/menu/menu_main.xml
@@ -14,6 +14,11 @@
                 android:title="@string/main_agregar_contacto">
             </item>
             <item
+                android:id="@+id/casadd"
+                android:icon="@drawable/alarma5"
+                android:title="@string/main_agregar_cas">
+            </item>
+            <item
                 android:id="@+id/menuabouth"
                 android:icon="@drawable/ic_launcher_logo"
                 android:title="@string/main_menu_acerca_de">
